--- a/src/a3_task4_thomas_wheeler.Rmd
+++ b/src/a3_task4_thomas_wheeler.Rmd
@@ -18,30 +18,42 @@ library(lubridate)
 Read in data, pull sample vectors for Red and Purple Urchin Data
 ```{r}
 urchin_data <- read_csv(here("data", "urchins.csv"))
+```
 
+
+```{r}
 #Create dataframe for all purple urchin data only collected in January 2010
 purple_urchins_jan2010 <- urchin_data %>% 
   mutate(DATE = mdy(DATE)) %>% 
   mutate(MONTH = month(DATE)) %>% 
   mutate(YEAR = year(DATE)) %>% 
-  filter(MONTH == 1, YEAR == 2010, COMMON_NAME == "Purple Urchin")
+  filter(MONTH == 1, 
+         YEAR == 2010,
+         SITE == "NAPL",
+         COMMON_NAME == "Purple Urchin")
+```
 
+
+```{r}
 #Create dataframe for purple urchin data only collected in January 2010 and only in the control group
 #Pull just the size values out of the dataframe as a vector to make it readable for the t.test function
 purple_urchins_control <- urchin_data %>% 
   mutate(DATE = mdy(DATE)) %>% 
   mutate(MONTH = month(DATE)) %>% 
   mutate(YEAR = year(DATE)) %>% 
-  filter(MONTH == 1, YEAR == 2010, COMMON_NAME == "Purple Urchin", TREATMENT == "CONTROL") %>% 
+  filter(MONTH == 1, YEAR == 2010, SITE == "NAPL", COMMON_NAME == "Purple Urchin", TREATMENT == "CONTROL") %>% 
   pull(SIZE)
+```
 
+
+```{r}
 #Create dataframe for purple urchin data only collected in January 2010 and only in the annual group
 #Pull just the size values out of the dataframe as a vector to make it readable for the t.test function
 purple_urchins_annual <- urchin_data %>% 
   mutate(DATES = mdy(DATE)) %>% 
   mutate(MONTH = month(DATES)) %>% 
   mutate(YEAR = year(DATES)) %>% 
-  filter(MONTH == 1, YEAR == 2010, COMMON_NAME == "Purple Urchin", TREATMENT == "ANNUAL") %>% 
+  filter(MONTH == 1, YEAR == 2010, SITE == "NAPL", COMMON_NAME == "Purple Urchin", TREATMENT == "ANNUAL") %>% 
   pull(SIZE)
 
 ```
@@ -49,10 +61,10 @@ purple_urchins_annual <- urchin_data %>%
 Histogram plot to assess distribution normality
 ```{r}
 ggplot(data = purple_urchins_jan2010, aes(x = SIZE)) +
-  geom_histogram(bins = 10) +
+  geom_histogram() +
   facet_wrap(~TREATMENT)
 ```
-Main takeaways: For the most part, these two histograms appear to be normally distributed, with a possibility for negative skew based on a larger proportion of values being to the left of the most common value. This assessment is based on a bin number set to 10, looking at different bin number can change the way the distribution looks so it's important to experiment with different distributions.
+Main takeaways: For the most part, these two histograms appear to be normally distributed, with a possibility for negative skew based on a larger proportion of values being to the left of the most common value.
 
 QQ-Plot to assess distribution normality
 ```{r}
@@ -64,7 +76,7 @@ Main takeaways: For the most part, both plots appear to be linear. The control g
 
 
 ```{r}
-#Assign summary stats to a variable, summary stats are grouped by urchin common name
+#Assign summary stats to a variable, summary stats are grouped by urchin treatment
 purple_urchin_stats <- purple_urchins_jan2010 %>% 
   group_by(TREATMENT) %>% 
   summarize(mean_size = mean(SIZE), 
@@ -80,5 +92,7 @@ kbl(purple_urchin_stats, caption = "Urchin Size Comparisons for Annual and Contr
 
 ```{r}
 t.test(x = purple_urchins_control, purple_urchins_annual)
+
+percent_difference <- ((mean(purple_urchins_annual) - mean(purple_urchins_control))/((mean(purple_urchins_annual) + mean(purple_urchins_control))/2))*100
 ```
-Analysis of results: To start, despite these data being a small subset of an extremely large dataset, we have reasonably large sample sizes of 115 for the annual group and 92 for the control group. That said, these two means are extremely close. The annual group's mean was only .22 cm larger than the control's mean and their median sizes were the same. The standard deviations were very similar as well, only .03 cm different, suggesting they had a relatively similar data spread. The p-value in this result means there is a 14.4% probability of getting two sample means that are at least this different, assuming they were drawn from populations with the same mean.
+Analysis of results: To start, despite these data being a small subset of an extremely large dataset, we have reasonably large sample sizes of 60 for the annual group and 62 for the control group. That said, these two means are extremely close. The annual group's mean was only .19 cm larger and 4.9% different than the control's mean and the median size was .5 cm larger. The p-value in this result means there is a 25.3% probability of getting two sample means that are at least this different, assuming they were drawn from populations with the same mean. Based on the general size of the samples, the very slight difference in the mean size when assessing the cm and percentage difference and the relatively high p-value, I would argue that these samples have the same population mean or, in other words, these two sets of data are not significantly different enough to be two distinct groups with two different population means.
